tdf#78727 sw: fix missing textbox text when anchored inside flying table

It was missing as the shape text range was deleted twice, as
DelFlyInRange() thought both the fly and the draw frame format own its
contents range, while only the fly one does (when called by
SwDoc::MakeFlyAndMove(), called by SwXText::convertToTextFrame()).

Thanks Red Hat for the pizza!

(cherry picked from commit 9d9e5b40c1a6d91323564e60b25ccf04df86db4b)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: I26e23550df085511e0e87f593f1a461057413d0e